<resources>
    <string name="app_name">Kadai03_ih13a_13</string>
    <string name="title">課題03   レイアウト練習</string>
    <string name="author">IH13A283 島田雅人</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">ー</string>
    <string name="multiplied">X</string>
    <string name="divided">÷</string>
    <string name="equal">=</string>
    <string name="bot">.</string>
    <string name="backspace">←</string>
    <string name="plusminus">±</string>
    <string name="clear">C</string>
</resources>
